# oceanmesh

./: .coverage  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  MANIFEST.in  Makefile  README.md  install_cgal.bat  install_oceanmesh.bat  package.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  step01_support.bat  step02_install.bat  step02_install_cgal_custom.bat  step03_activate.bat  tox.ini  versioneer.py
.circleci/: config.yml
.github/workflows/: ci.yml  formatting.yml  publish-testpypi.yml  publish.yml  testing.yml
examples/: subset_fort14.ipynb  subset_mesh.ipynb
oceanmesh/: Grid.py  __init__.py  _version.py  bbox.py  bc.py  boundary.py  clean.py  edgefx.py  edges.py  filterfx.py  fix_mesh.py  generate_mesh.py  geodata.py  geometry.py  grid.py  idw.py  inpoly.py  mesh_generator.py  projections.py  read_fort14.py  region.py  signed_distance_function.py  signed_distance_functions.py  subset_fort14.py  subset_mesh.py
oceanmesh/_vendor/: __init__.py
oceanmesh/_vendor/inpoly/: LICENSE_INPOLY.txt  __init__.py  inpoly2.py  inpoly_.c  inpoly_.pyx
oceanmesh/cpp/: HamiltonJacobi.cpp  delaunay_class.cpp  fast_geometry.cpp
oceanmesh/geometry/: __init__.py  point_in_polygon.py  point_in_polygon_.c  point_in_polygon_.pyx
ports/cgal/: portfile.cmake  vcpkg.json
pyOceanMesh/: __init__.py  edgefx.py  geodata.py
pyOceanMesh/geodata/: __init__.py  geodata.py
pyOceanMesh/msh/: __init__.py  msh.py
pyOceanMesh/utils/: __init__.py
tests/: GSHHS_i_L1.shx  GSHHS_l_L1.shp  conftest.py  islands.dbf  islands.shp  islands.shx  land.shp  land3.shp  ocean.dbf  ocean.shp  ocean.shx  test_README.py  test_bathymetric_gradient_function.py  test_circ.py  test_circ_rect.py  test_delete_exterior.py  test_delete_interior.py  test_edgefx.py  test_edges.py  test_geodata.py  test_global_regional_multiscale.py  test_global_stereo.py  test_grade.py  test_irregular_domain.py  test_mesh_generator_simple.py  test_multiscale.py  test_point_in_polygon.py  test_rect.py  test_signed_distance_function.py  test_verbose.py
tests/global/: global_latlon.dbf  global_latlon.shp  global_latlon.shx  global_stereo.dbf  global_stereo.shp  global_stereo.shx
tests/unit/: test_geodata.py
tools/: build_deps_linux.sh  verify_manylinux_wheels.py
