[build-system]
requires = [
	"setuptools>=42",
	"wheel",
	"pybind11>=2.6.0",
	"versioneer-518",
	"numpy>=1.20",
	"Cython>=0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py310']

[tool.cibuildwheel]
# Build wheels for CPython 3.10–3.12 (can expand once deps support newer Pythons)
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
