[metadata]
name = oceanmesh
version = 0.0.3
url = https://github.com/krober10nd/oceanmesh
author = Keith Roberts
email = keithrbt0@gmail.com
description = Automatic coastal ocean mesh generation.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
[options]
packages = find:
install_requires =
        numpy
        inpoly==0.1.2
        meshio
        scipy
        netcdf4
        pyshp
        matplotlib
        Pillow
        scikit-fmm
        shapely
python_requires = >=3.0
