[metadata]
name = oceanmesh
url = https://github.com/krober10nd/oceanmesh
author = Keith Roberts
email = keithrbt0@gmail.com
description = Automatic coastal ocean mesh generation.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
[options]
packages = find:
install_requires =
        numpy
        meshio
        pyproj
        scipy
        geopandas
        fiona
        shapely
        matplotlib
        rasterio>=1.3a1
        rioxarray
        scikit-fmm
        scikit-image
python_requires = >=3.10

[options.extras_require]
fast =
    cython
    numpy
    scipy
global = cartopy

[versioneer]
VCS = git
style = pep440
versionfile_source = oceanmesh/_version.py
versionfile_build = oceanmesh/_version.py
tag_prefix = v
